# spotlight

./: PKGBUILD  README.md  meson.build
data/: spotlight.css  spotlight.desktop  spotlight_dark.css
src/: Application.vala  DesktopEntries.vala
src/Widgets/Calculator/Core/: Scanner.vala
